Correct url path
